--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
         }
       ],
       "destination": "https://www.bidemi.xyz/$1",
-      "permanent": true
+      "permanent": true,
+      "statusCode": 301
     },
     {
       "source": "/(.*)",
@@ -31,6 +32,18 @@
         {
           "key": "Strict-Transport-Security",
           "value": "max-age=63072000; includeSubDomains; preload"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
         }
       ]
     }
